--- a/scss/style.css
+++ b/scss/style.css
@@ -8,6 +8,13 @@
   display: flex;
   justify-content: center;
 }
+.container h1,
+.container h2,
+.container h3,
+.container p,
+.container a {
+  color: #222222;
+}
 .container .menu__button {
   position: absolute;
   left: 0;
@@ -19,10 +26,14 @@
   height: 16px;
   gap: 5px;
   cursor: pointer;
+  transition: opacity 0.2s ease-out;
 }
 .container .menu__button span {
   border: 1px solid #222222;
   border-radius: 4px;
+}
+.container .menu__button:hover {
+  opacity: 0.5;
 }
 .container .background {
   position: absolute;
@@ -35,6 +46,7 @@
 }
 .container .wrapper .header {
   width: 100%;
+  height: 850px;
 }
 .container .wrapper .header .header__heading {
   width: 500px;
@@ -57,9 +69,6 @@
 .container .wrapper .header .header__info {
   margin-top: 120px;
   max-width: 920;
-}
-.container .wrapper .header .header__info .header__info__text {
-  color: #222222;
 }
 .container .wrapper .header .header__info .header__info__name {
   width: 380px;
@@ -138,4 +147,235 @@
 }
 .container .wrapper .header .header__info .header__info__button:hover a {
   color: #222222;
+}
+.container .wrapper .main {
+  margin-top: 140px;
+}
+.container .wrapper .main .main__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .wrapper .main .main__title .main__title__text {
+  max-width: 980px;
+  text-align: center;
+}
+.container .wrapper .main .main__title .main__title__text p {
+  font-family: "Prata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 34px;
+  letter-spacing: 0.02em;
+}
+.container .wrapper .main .main__career {
+  margin-top: 130px;
+}
+.container .wrapper .main .main__career .main__career__card__container {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 75px;
+}
+.container .wrapper .main .main__career .main__career__card__container .main__career__card {
+  width: 180px;
+  text-align: center;
+}
+.container .wrapper .main .main__career .main__career__card__container .main__career__card .main__career__card__digit p {
+  font-family: "Prata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 65px;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__career .main__career__card__container .main__career__card .main__career__card__text p {
+  margin-top: 20px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__portfolio {
+  margin-top: 130px;
+}
+.container .wrapper .main .main__portfolio .main__portfolio__title {
+  text-align: center;
+}
+.container .wrapper .main .main__portfolio .main__portfolio__title p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__portfolio .main__portfolio__image__container {
+  -moz-columns: 2;
+       columns: 2;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  row-gap: 20px;
+  margin-top: 60px;
+}
+.container .wrapper .main .main__feedback__container {
+  margin-top: 120px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback__title {
+  text-align: center;
+}
+.container .wrapper .main .main__feedback__container .main__feedback__title p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__feedback__container .main__feedback {
+  margin-top: 70px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
+  row-gap: 50px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card {
+  max-width: 340px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead {
+  display: flex;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead .main__feedback__card__uphead__photo img {
+  border-radius: 30px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead .main__feedback__card__uphead__info {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead .main__feedback__card__uphead__info .main__feedback__card__uphead__info__name p {
+  font-family: "Prata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead .main__feedback__card__uphead__info .main__feedback__card__uphead__info__years p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #999999;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__subhead {
+  margin-top: 20px;
+}
+.container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__subhead p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #666666;
+}
+.container .wrapper .main .main__price {
+  margin-top: 145px;
+}
+.container .wrapper .main .main__price .main__price__bg {
+  position: absolute;
+  right: 0;
+  z-index: -1;
+}
+.container .wrapper .main .main__price .main__price__title {
+  padding-top: 100px;
+}
+.container .wrapper .main .main__price .main__price__title p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__price .main__price__text {
+  margin-top: 40px;
+  max-width: 480px;
+}
+.container .wrapper .main .main__price .main__price__text p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #666666;
+}
+.container .wrapper .main .main__price .main__price__container {
+  margin-top: 107px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.container .wrapper .main .main__price .main__price__container .main__price__card {
+  width: 280px;
+  height: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 28px;
+  background: #ffffff;
+}
+.container .wrapper .main .main__price .main__price__container .main__price__card .main__price__card__text p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+.container .wrapper .main .main__price .main__price__container .main__price__card .main__price__card__price p {
+  font-family: "Prata";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.02em;
+}
+.container .wrapper .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+  height: 140px;
+}
+.container .wrapper .footer .footer__container {
+  width: 510px;
+  display: flex;
+  justify-content: space-between;
+}
+.container .wrapper .footer .footer__develop p {
+  text-align: right;
+}
+.container .wrapper .footer p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #999999;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
