--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,14 @@
   display: flex;
   justify-content: center;
 
+  h1,
+  h2,
+  h3,
+  p,
+  a {
+    color: #222222;
+  }
+
   .menu__button {
     position: absolute;
     left: 0;
@@ -19,11 +27,16 @@
     height: 16px;
     gap: 5px;
     cursor: pointer;
+    transition: opacity 0.2s ease-out;
 
     span {
       border: 1px solid #222222;
       border-radius: 4px;
     }
+  }
+
+  .menu__button:hover {
+    opacity: 0.5;
   }
 
   .background {
@@ -38,6 +51,7 @@
 
     .header {
       width: 100%;
+      height: calc(900px - 50px);
 
       .header__heading {
         width: 500px;
@@ -64,10 +78,6 @@
       .header__info {
         margin-top: 120px;
         max-width: 920;
-
-        .header__info__text {
-          color: #222222;
-        }
 
         .header__info__name {
           width: 380px;
@@ -158,6 +168,282 @@
           }
         }
       }
+    }
+    .main {
+      margin-top: 140px;
+
+      .main__title {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .main__title__text {
+          max-width: 980px;
+          text-align: center;
+        }
+
+        .main__title__text p {
+          font-family: "Prata";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 24px;
+          line-height: 34px;
+          letter-spacing: 0.02em;
+        }
+      }
+
+      .main__career {
+        margin-top: 130px;
+
+        .main__career__card__container {
+          display: flex;
+          gap: 20px;
+          justify-content: center;
+          margin-top: 75px;
+
+          .main__career__card {
+            width: 180px;
+            text-align: center;
+
+            .main__career__card__digit p {
+              font-family: "Prata";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 60px;
+              line-height: 65px;
+              letter-spacing: 0.02em;
+              text-transform: uppercase;
+            }
+
+            .main__career__card__text p {
+              margin-top: 20px;
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 600;
+              font-size: 14px;
+              line-height: 22px;
+              letter-spacing: 0.1em;
+              text-transform: uppercase;
+            }
+          }
+        }
+      }
+      .main__portfolio {
+        margin-top: 130px;
+
+        .main__portfolio__title {
+          text-align: center;
+        }
+
+        .main__portfolio__title p {
+          font-family: "Montserrat";
+          font-style: normal;
+          font-weight: 300;
+          font-size: 40px;
+          line-height: 50px;
+          letter-spacing: 0.3em;
+          text-transform: uppercase;
+        }
+
+        .main__portfolio__image__container {
+          columns: 2;
+          column-gap: 20px;
+          row-gap: 20px;
+          margin-top: 60px;
+
+          .main__portfolio__image__card {
+          }
+
+          // .item {
+          //   width: 100%;
+          // }
+
+          // .main__portfolio__image__card:nth-of-type(1),
+          // .main__portfolio__image__card:nth-of-type(4),
+          // .main__portfolio__image__card:nth-of-type(5),
+          // .main__portfolio__image__card:nth-of-type(8) {
+          // }
+        }
+      }
+
+      .main__feedback__container {
+        margin-top: 120px;
+
+        .main__feedback__title {
+          text-align: center;
+        }
+
+        .main__feedback__title p {
+          font-family: "Montserrat";
+          font-style: normal;
+          font-weight: 300;
+          font-size: 40px;
+          line-height: 50px;
+          letter-spacing: 0.3em;
+          text-transform: uppercase;
+        }
+
+        .main__feedback {
+          margin-top: 70px;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          column-gap: 60px;
+          row-gap: 50px;
+
+          .main__feedback__card {
+            max-width: 340px;
+
+            .main__feedback__card__uphead {
+              display: flex;
+
+              .main__feedback__card__uphead__photo img {
+                border-radius: 30px;
+              }
+
+              .main__feedback__card__uphead__info {
+                margin-left: 20px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 5px;
+
+                .main__feedback__card__uphead__info__name p {
+                  font-family: "Prata";
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 16px;
+                  line-height: 24px;
+                  letter-spacing: 0.02em;
+                }
+
+                .main__feedback__card__uphead__info__years p {
+                  font-family: "Montserrat";
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 14px;
+                  line-height: 24px;
+                  color: #999999;
+                }
+              }
+            }
+
+            .main__feedback__card__subhead {
+              margin-top: 20px;
+            }
+
+            .main__feedback__card__subhead p {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 26px;
+              color: #666666;
+            }
+          }
+        }
+      }
+      .main__price {
+        margin-top: 145px;
+
+        .main__price__bg {
+          position: absolute;
+          right: 0;
+          z-index: -1;
+        }
+
+        .main__price__title {
+          padding-top: 100px;
+        }
+
+        .main__price__title p {
+          font-family: "Montserrat";
+          font-style: normal;
+          font-weight: 300;
+          font-size: 40px;
+          line-height: 50px;
+          letter-spacing: 0.3em;
+          text-transform: uppercase;
+        }
+
+        .main__price__text {
+          margin-top: 40px;
+          max-width: 480px;
+        }
+
+        .main__price__text p {
+          font-family: "Montserrat";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 26px;
+          color: #666666;
+        }
+
+        .main__price__container {
+          margin-top: 107px;
+          display: flex;
+          justify-content: center;
+          gap: 20px;
+
+          .main__price__card {
+            width: 280px;
+            height: 260px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 28px;
+            background: #ffffff;
+
+            .main__price__card__text p {
+              font-family: "Montserrat";
+              font-style: normal;
+              font-weight: 600;
+              font-size: 14px;
+              line-height: 22px;
+              letter-spacing: 0.1em;
+              text-transform: uppercase;
+            }
+
+            .main__price__card__price p {
+              font-family: "Prata";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 24px;
+              line-height: 32px;
+              letter-spacing: 0.02em;
+            }
+          }
+        }
+      }
+    }
+    .footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 100px;
+      height: 140px;
+
+      .footer__container {
+        width: 510px;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .footer__develop p {
+        text-align: right;
+      }
+    }
+
+    .footer p {
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 18px;
+      color: #999999;
+      cursor: pointer;
     }
   }
 }
