--- a/scss/style.css
+++ b/scss/style.css
@@ -148,6 +148,9 @@
 .container .wrapper .header .header__info .header__info__button:hover a {
   color: #222222;
 }
+.container .wrapper .header .background__media {
+  display: none;
+}
 .container .wrapper .main {
   margin-top: 140px;
 }
@@ -157,7 +160,7 @@
   align-items: center;
 }
 .container .wrapper .main .main__title .main__title__text {
-  max-width: 980px;
+  width: 980px;
   text-align: center;
 }
 .container .wrapper .main .main__title .main__title__text p {
@@ -216,12 +219,15 @@
   text-transform: uppercase;
 }
 .container .wrapper .main .main__portfolio .main__portfolio__image__container {
-  -moz-columns: 2;
-       columns: 2;
-  -moz-column-gap: 20px;
-       column-gap: 20px;
-  row-gap: 20px;
   margin-top: 60px;
+  display: grid;
+  grid-template-columns: 580px 580px;
+  grid-gap: 20px;
+  justify-content: center;
+}
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .main__portfolio__image__card:nth-of-type(3),
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .main__portfolio__image__card:nth-of-type(7) {
+  margin-top: -220px;
 }
 .container .wrapper .main .main__feedback__container {
   margin-top: 120px;
@@ -248,7 +254,7 @@
   row-gap: 50px;
 }
 .container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card {
-  max-width: 340px;
+  width: 340px;
 }
 .container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__uphead {
   display: flex;
@@ -312,7 +318,7 @@
 }
 .container .wrapper .main .main__price .main__price__text {
   margin-top: 40px;
-  max-width: 480px;
+  width: 480px;
 }
 .container .wrapper .main .main__price .main__price__text p {
   font-family: "Montserrat";
@@ -378,4 +384,202 @@
   line-height: 18px;
   color: #999999;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .container .menu__button {
+    margin: 34px 0px 0px 30px;
+  }
+  .container .background {
+    display: none;
+  }
+  .container .wrapper {
+    width: 100%;
+    margin-top: 29px;
+  }
+  .container .wrapper .header {
+    height: 1140px;
+  }
+  .container .wrapper .header .header__heading {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .container .wrapper .header .header__heading .header__heading__media {
+    display: none;
+  }
+  .container .wrapper .header .header__info {
+    margin-top: 53px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .container .wrapper .header .header__info .header__info__name .header__info__name__text {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .container .wrapper .header .header__info .header__info__title .header__info__title__text__uphead,
+.container .wrapper .header .header__info .header__info__title .header__info__title__text__subhead {
+    font-size: 50px;
+    line-height: 50px;
+  }
+  .container .wrapper .header .header__info .header__info__title .header__info__title__text__subhead span {
+    font-size: 20px;
+    line-height: 50px;
+    padding-left: 25px;
+  }
+  .container .wrapper .header .header__info .header__info__about {
+    width: 360px;
+    text-align: center;
+    margin-top: 23px;
+  }
+  .container .wrapper .header .header__info .header__info__about .header__info__about__text {
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .container .wrapper .header .header__info .header__info__button {
+    margin-top: 36px;
+  }
+  .container .wrapper .header .background__media {
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+  }
+  .container .wrapper .header .background__media img {
+    width: 660px;
+    height: 625px;
+  }
+  .container .wrapper .main {
+    width: 100%;
+  }
+  .container .wrapper .main .main__title {
+    width: 100%;
+  }
+  .container .wrapper .main .main__title .main__title__text {
+    width: 660px;
+  }
+  .container .wrapper .main .main__title .main__title__text p {
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .container .wrapper .main .main__career .main__career__image {
+    display: flex;
+    justify-content: center;
+  }
+  .container .wrapper .main .main__career .main__career__image img {
+    width: 660px;
+    height: 280px;
+  }
+  .container .wrapper .main .main__career .main__career__card__container {
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+  .container .wrapper .main .main__career .main__career__card__container .main__career__card .main__career__card__digit p {
+    font-size: 50px;
+    line-height: 55px;
+  }
+  .container .wrapper .main .main__portfolio {
+    margin-top: 90px;
+    width: 100%;
+  }
+  .container .wrapper .main .main__portfolio .main__portfolio__title p {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .container .wrapper .main .main__portfolio .main__portfolio__image__container {
+    margin-top: 51px;
+    grid-template-columns: 320px 320px;
+  }
+  .container .wrapper .main .main__portfolio .main__portfolio__image__container .card-1 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-4 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-5 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-8 img {
+    width: 320px;
+    height: 220px;
+  }
+  .container .wrapper .main .main__portfolio .main__portfolio__image__container .card-2 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-3 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-6 img,
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .card-7 img {
+    width: 320px;
+    height: 340px;
+  }
+  .container .wrapper .main .main__portfolio .main__portfolio__image__container .main__portfolio__image__card:nth-of-type(3),
+.container .wrapper .main .main__portfolio .main__portfolio__image__container .main__portfolio__image__card:nth-of-type(7) {
+    margin-top: -120px;
+  }
+  .container .wrapper .main .main__feedback__container {
+    margin-top: 70px;
+    width: 100%;
+  }
+  .container .wrapper .main .main__feedback__container .main__feedback__title p {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .container .wrapper .main .main__feedback__container .main__feedback {
+    margin-top: 51px;
+    -moz-column-gap: 40px;
+         column-gap: 40px;
+    row-gap: 35px;
+  }
+  .container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card {
+    width: 300px;
+  }
+  .container .wrapper .main .main__feedback__container .main__feedback .main__feedback__card .main__feedback__card__subhead p {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .container .wrapper .main .main__price {
+    width: 100%;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container .wrapper .main .main__price .main__price__bg {
+    position: static;
+    display: flex;
+    justify-content: center;
+  }
+  .container .wrapper .main .main__price .main__price__bg img {
+    width: 660px;
+    height: 530px;
+  }
+  .container .wrapper .main .main__price .main__price__title {
+    padding-top: 0;
+    margin-top: 60px;
+    text-align: center;
+  }
+  .container .wrapper .main .main__price .main__price__title p {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .container .wrapper .main .main__price .main__price__text {
+    width: 660px;
+    margin-top: 31px;
+    text-align: center;
+  }
+  .container .wrapper .main .main__price .main__price__container {
+    flex-wrap: wrap;
+    margin-top: 31px;
+  }
+  .container .wrapper .footer {
+    margin-top: 83px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+  }
+  .container .wrapper .footer .footer__container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
 }/*# sourceMappingURL=style.css.map */
