--- a/scss/style.scss
+++ b/scss/style.scss
@@ -168,6 +168,10 @@
           }
         }
       }
+
+      .background__media {
+        display: none;
+      }
     }
     .main {
       margin-top: 140px;
@@ -178,7 +182,7 @@
         align-items: center;
 
         .main__title__text {
-          max-width: 980px;
+          width: 980px;
           text-align: center;
         }
 
@@ -246,23 +250,19 @@
         }
 
         .main__portfolio__image__container {
-          columns: 2;
-          column-gap: 20px;
-          row-gap: 20px;
           margin-top: 60px;
+          display: grid;
+          grid-template-columns: 580px 580px;
+          grid-gap: 20px;
+          justify-content: center;
 
           .main__portfolio__image__card {
           }
 
-          // .item {
-          //   width: 100%;
-          // }
-
-          // .main__portfolio__image__card:nth-of-type(1),
-          // .main__portfolio__image__card:nth-of-type(4),
-          // .main__portfolio__image__card:nth-of-type(5),
-          // .main__portfolio__image__card:nth-of-type(8) {
-          // }
+          .main__portfolio__image__card:nth-of-type(3),
+          .main__portfolio__image__card:nth-of-type(7) {
+            margin-top: -220px;
+          }
         }
       }
 
@@ -292,7 +292,7 @@
           row-gap: 50px;
 
           .main__feedback__card {
-            max-width: 340px;
+            width: 340px;
 
             .main__feedback__card__uphead {
               display: flex;
@@ -368,7 +368,7 @@
 
         .main__price__text {
           margin-top: 40px;
-          max-width: 480px;
+          width: 480px;
         }
 
         .main__price__text p {
@@ -444,6 +444,249 @@
       line-height: 18px;
       color: #999999;
       cursor: pointer;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .menu__button {
+      margin: 34px 0px 0px 30px;
+    }
+
+    .background {
+      display: none;
+    }
+
+    .wrapper {
+      width: 100%;
+      margin-top: 29px;
+
+      .header {
+        height: 1140px;
+        .header__heading {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+
+          .header__heading__media {
+            display: none;
+          }
+        }
+
+        .header__info {
+          margin-top: 53px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+
+          .header__info__name {
+            .header__info__name__text {
+              font-size: 30px;
+              line-height: 40px;
+            }
+          }
+
+          .header__info__title {
+            .header__info__title__text__uphead,
+            .header__info__title__text__subhead {
+              font-size: 50px;
+              line-height: 50px;
+            }
+
+            .header__info__title__text__subhead span {
+              font-size: 20px;
+              line-height: 50px;
+              padding-left: 25px;
+            }
+          }
+
+          .header__info__about {
+            width: 360px;
+            text-align: center;
+            margin-top: 23px;
+            .header__info__about__text {
+              font-size: 16px;
+              line-height: 26px;
+            }
+          }
+
+          .header__info__button {
+            margin-top: 36px;
+          }
+        }
+
+        .background__media {
+          margin-top: 60px;
+          display: flex;
+          justify-content: center;
+        }
+
+        .background__media img {
+          width: 660px;
+          height: 625px;
+        }
+      }
+
+      .main {
+        width: 100%;
+
+        .main__title {
+          width: 100%;
+
+          .main__title__text {
+            width: 660px;
+          }
+
+          .main__title__text p {
+            font-size: 20px;
+            line-height: 30px;
+          }
+        }
+        .main__career {
+          .main__career__image {
+            display: flex;
+            justify-content: center;
+          }
+
+          .main__career__image img {
+            width: 660px;
+            height: 280px;
+          }
+
+          .main__career__card__container {
+            flex-wrap: wrap;
+            gap: 60px;
+
+            .main__career__card {
+              .main__career__card__digit p {
+                font-size: 50px;
+                line-height: 55px;
+              }
+            }
+          }
+        }
+
+        .main__portfolio {
+          margin-top: 90px;
+          width: 100%;
+
+          .main__portfolio__title p {
+            font-size: 30px;
+            line-height: 40px;
+          }
+
+          .main__portfolio__image__container {
+            margin-top: 51px;
+            grid-template-columns: 320px 320px;
+
+            .card-1 img,
+            .card-4 img,
+            .card-5 img,
+            .card-8 img {
+              width: 320px;
+              height: 220px;
+            }
+
+            .card-2 img,
+            .card-3 img,
+            .card-6 img,
+            .card-7 img {
+              width: 320px;
+              height: 340px;
+            }
+
+            .main__portfolio__image__card:nth-of-type(3),
+            .main__portfolio__image__card:nth-of-type(7) {
+              margin-top: -120px;
+            }
+          }
+        }
+
+        .main__feedback__container {
+          margin-top: 70px;
+          width: 100%;
+
+          .main__feedback__title p {
+            font-size: 30px;
+            line-height: 40px;
+          }
+
+          .main__feedback {
+            margin-top: 51px;
+            column-gap: 40px;
+            row-gap: 35px;
+
+            .main__feedback__card {
+              width: 300px;
+
+              .main__feedback__card__subhead p {
+                font-size: 14px;
+                line-height: 22px;
+              }
+            }
+          }
+        }
+        .main__price {
+          width: 100%;
+          margin-top: 80px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          .main__price__bg {
+            position: static;
+            display: flex;
+            justify-content: center;
+          }
+
+          .main__price__bg img {
+            width: 660px;
+            height: 530px;
+          }
+
+          .main__price__title {
+            padding-top: 0;
+            margin-top: 60px;
+            text-align: center;
+          }
+
+          .main__price__title p {
+            font-size: 30px;
+            line-height: 40px;
+          }
+
+          .main__price__text {
+            width: 660px;
+            margin-top: 31px;
+            text-align: center;
+          }
+
+          .main__price__container {
+            flex-wrap: wrap;
+            margin-top: 31px;
+          }
+        }
+      }
+      .footer {
+        margin-top: 83px;
+        flex-direction: column;
+        justify-content: center;
+        gap: 10px;
+
+        .footer__container {
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+        }
+      }
     }
   }
 }
